--- a/embed-example.html
+++ b/embed-example.html
@@ -4,20 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot Embed Example</title>
-    <script src="https://test-popup-xi.vercel.app/embed.js"></script>
 </head>
 <body>
   hi
-  <div id="creators-agi-chat"></div>
-
-  <!-- Initialize the chat -->
-  <script>
-      const chat = new CreatorsAGIChat({
-          containerId: 'creators-agi-chat',
-          chatUrl: 'https://test-popup-xi.vercel.app',
-          width: '100%',
-          height: '600px'
-      });
-  </script>
+  <iframe src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app">
+    <script src="https://test-popup-xi.vercel.app/embed.js"></script>
+</iframe>
 </body>
 </html>
