--- a/embed-example.html
+++ b/embed-example.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   hi
-  <iframe src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app">
+  <iframe src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app" width="1000" height="1000">
     <script src="https://test-popup-xi.vercel.app/embed.js"></script>
 </iframe>
 </body>
