--- a/embed-example.html
+++ b/embed-example.html
@@ -7,8 +7,15 @@
 </head>
 <body>
   hi
-  <iframe src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app" width="1000" height="1000">
-    <script src="https://test-popup-xi.vercel.app/embed.js"></script>
-</iframe>
+
+<div class="chat-container">
+  <iframe 
+      src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app"
+      style="width: 100%; height: 100%; border: none;"
+      title="Chat Interface"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+  ></iframe>
+</div>
 </body>
 </html>
