--- a/embed-example.html
+++ b/embed-example.html
@@ -11,7 +11,7 @@
 <div class="chat-container">
   <iframe 
       src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app"
-      style="width: 100%; height: 100%; border: none;"
+      style="width: 600px; height: 1000px; border: none;"
       title="Chat Interface"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
