fix queqy params

--- a/embed-example.html
+++ b/embed-example.html
@@ -10,7 +10,7 @@
 
 <div class="chat-container">
   <iframe 
-      src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app"
+      src="https://test-popup-xi.vercel.app/bridge?domain=https://test-popup-xi.vercel.app&origin=https://test-popup-xi.vercel.app"
       style="width: 600px; height: 1000px; border: none;"
       title="Chat Interface"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
