--- a/embed-example.html
+++ b/embed-example.html
@@ -6,20 +6,11 @@
     <title>Chatbot Embed Example</title>
   </head>
   <body>
-    <div id="my-custom-chat-container"></div>
-    
-    <!-- Advanced usage with all configuration options -->
+    <div id="creators-agi-chat"></div>
+
     <script
       src="https://test-popup-xi.vercel.app/embed.js"
       data-chat-url="https://test-popup-xi.vercel.app"
-      data-container-id="my-custom-chat-container"
-      data-width="800px"
-      data-height="600px"
-      data-allow-fullscreen="true"
-      data-allow-transparency="true"
-      data-allow-payment-request="true"
-      data-allow="microphone; camera"
-      data-sandbox="allow-same-origin allow-scripts allow-popups allow-forms allow-downloads allow-modals"
     ></script>
   </body>
 </html>
