--- a/embed-example.html
+++ b/embed-example.html
@@ -12,5 +12,14 @@
       src="https://test-popup-xi.vercel.app/embed.js"
       data-chat-url="https://test-popup-xi.vercel.app"
     ></script>
+
+    <!-- First, include the chat button script -->
+    <script src="https://test-popup-xi.vercel.app/chat-button.js"></script>
+
+    <!-- Then, include the embed script with the domain configuration -->
+    <script
+      data-chat-domain="why.zenoti.com"
+      src="https://test-popup-xi.vercel.app/embed.js"
+    ></script>
   </body>
 </html>
