--- a/embed-no-auth.html
+++ b/embed-no-auth.html
@@ -9,7 +9,13 @@
     <div id="creators-agi-chat"></div>
 
     <!-- First, include the chat button script -->
-    <script src="https://test-popup-xi.vercel.app/chat-button.js"></script>
-
+    <script
+      src="https://test-popup-xi.vercel.app/embed-no-auth.js"
+      data-chat-url="https://test-popup-xi.vercel.app"
+      data-button-text="Chat with us"
+      data-button-color="#0070f3"
+      data-width="380px"
+      data-height="600px"
+    ></script>
   </body>
 </html>
