--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Demo Dialog</title>
   <script src="https://test-popup-xi.vercel.app/demo.js"></script>
+  <script 
+  src="https://test-popup-xi.vercel.app/demo.js"
+  data-domain="why.zenoti.com"
+  data-dialog-title="Ask Anything Below…"
+  data-mobile-button-text="Chat with AI"
+
+></script>
   <style>
     body {
       margin: 0;
