try color scheme

--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,8 @@
   data-domain="why.zenoti.com"
   data-dialog-title="Ask Anything Below…"
   data-mobile-button-text="Chat with AI"
+  data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
+  data-primaryColor="#ff0000"
 
 ></script>
   <style>
