--- a/demo.html
+++ b/demo.html
@@ -96,7 +96,7 @@
   data-domain="why.zenoti.com"
   data-dialog-title="Ask Anything Below…"
   data-mobile-button-text="Chat with AI"
-  data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
+  data-suggestions='["Test", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
   data-primaryColor="#ff0000"
 ></script>
 </body>
