--- a/demo.html
+++ b/demo.html
@@ -97,7 +97,7 @@
   data-dialog-title="Ask Anything Below…"
   data-mobile-button-text="Chat with AI"
   data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
-  data-primary-color="#ff0000"
+  data-primary-color="#009fe3"
 ></script>
 </body>
 </html> 
