test sending messages on localhost

--- a/demo.html
+++ b/demo.html
@@ -97,7 +97,7 @@
     </div>
     <script
       src="https://test-popup-xi.vercel.app/demo.js"
-      data-domain="why.zenoti.com"
+      data-domain="localhost:3000"
       data-dialog-title="Ask Anything Below…"
       data-mobile-button-text="Chat with AI"
       data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
