--- a/demo.html
+++ b/demo.html
@@ -75,6 +75,15 @@
         font-style: italic;
       }
     </style>
+        <script
+        src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.js"
+        data-domain="why.zenoti.com"
+        data-dialog-title="Ask Anything Below…"
+        data-mobile-button-text="Chat with AI"
+        data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
+        data-primary-color="#009fe3"
+        data-placeholder-text="I'm looking to launch a MedSpa"
+      ></script>
   </head>
   <body>
     <div class="mock-header">
@@ -95,14 +104,6 @@
         All content and visuals are for demo purposes only.
       </div>
     </div>
-    <script
-      src="https://test-popup-xi.vercel.app/demo.js"
-      data-domain="localhost:3000"
-      data-dialog-title="Ask Anything Below…"
-      data-mobile-button-text="Chat with AI"
-      data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
-      data-primary-color="#009fe3"
-      data-placeholder-text="I'm looking to launch a MedSpa"
-    ></script>
+
   </body>
 </html>
