--- a/demo.html
+++ b/demo.html
@@ -75,15 +75,16 @@
         font-style: italic;
       }
     </style>
-        <script
-        src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.js"
-        data-domain="why.zenoti.com"
-        data-dialog-title="Ask Anything Below…"
-        data-mobile-button-text="Chat with AI"
-        data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
-        data-primary-color="#009fe3"
-        data-placeholder-text="I'm looking to launch a MedSpa"
-      ></script>
+    <script
+      src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.js"
+      data-domain="why.zenoti.com"
+      data-dialog-title="Welcome to Zenoti 👋"
+      data-dialog-subtitle="We're the #1 beauty and wellness software for a reason. Discover more about our all-in-one solution 💫"
+      data-mobile-button-text="Chat with AI"
+      data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
+      data-primary-color="#1aafe3"
+      data-placeholder-text="Enter a message"
+    ></script>
   </head>
   <body>
     <div class="mock-header">
@@ -104,6 +105,5 @@
         All content and visuals are for demo purposes only.
       </div>
     </div>
-
   </body>
 </html>
