--- a/demo.html
+++ b/demo.html
@@ -78,12 +78,12 @@
     <script
       src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.js"
       data-domain="why.zenoti.com"
-      data-dialog-title="Welcome to Zenoti 👋"
-      data-dialog-subtitle="We're the #1 beauty and wellness software for a reason. Discover more about our all-in-one solution 💫"
+      data-dialog-title="Ask Anything Below... :wave:"
+      data-dialog-subtitle="We're the #1 beauty and wellness software for a reason. Discover more about our all-in-one solution :dizzy:"
       data-mobile-button-text="Chat with AI"
       data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
       data-primary-color="#1aafe3"
-      data-placeholder-text="Enter a message"
+      data-placeholder-texts='["Ask anything...", "How is Zenoti better than...", "Can I get an overview..."]'
     ></script>
   </head>
   <body>
