--- a/demo.html
+++ b/demo.html
@@ -76,7 +76,7 @@
       }
     </style>
     <script
-      src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.js"
+      src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.min.js"
       data-domain="why.zenoti.com"
       data-dialog-title="Ask Anything Below... :wave:"
       data-dialog-subtitle="We're the #1 beauty and wellness software for a reason. Discover more about our all-in-one solution :dizzy:"
