--- a/demo.html
+++ b/demo.html
@@ -78,8 +78,8 @@
     <script
       src="https://storage.googleapis.com/creatorsagi-scripts/creatorsagi-widget.min.js"
       data-domain="why.zenoti.com"
-      data-dialog-title="Ask Anything Below... :wave:"
-      data-dialog-subtitle="We're the #1 beauty and wellness software for a reason. Discover more about our all-in-one solution :dizzy:"
+      data-dialog-title="Ask Anything Below... 👋"
+      data-dialog-subtitle="We're the #1 beauty and wellness software for a reason. Discover more about our all-in-one solution 💫"
       data-mobile-button-text="Chat with AI"
       data-suggestions='["Growth", "Multiple Locations", "Tips & Payroll", "AI Receptionist"]'
       data-primary-color="#1aafe3"
